--- a/OLEDSaver/Views/MainWindow.xaml
+++ b/OLEDSaver/Views/MainWindow.xaml
@@ -7,7 +7,9 @@
         xmlns:vm="clr-namespace:OLEDSaver.ViewModels"
             d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
         mc:Ignorable="d"
-        Title="OLEDSaver" Height="{Binding WindowHeight, Mode=TwoWay}" Width="{Binding WindowWidth, Mode=TwoWay}"
+        Title="OLEDSaver" 
+            Width="{Binding WindowWidth, Mode=TwoWay}"
+            Height="{Binding WindowHeight, Mode=TwoWay}" 
         WindowStyle="SingleBorderWindow"
         WindowState="Normal"
         WindowStartupLocation="CenterScreen"
