Moved backend code into VM

--- a/OLEDSaver/App.xaml
+++ b/OLEDSaver/App.xaml
@@ -4,6 +4,7 @@
              xmlns:local="clr-namespace:OLEDSaver"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConv" />
+       
     </Application.Resources>
 </Application>
