--- a/OLEDSaver/Views/MainWindow.xaml
+++ b/OLEDSaver/Views/MainWindow.xaml
@@ -7,20 +7,26 @@
         xmlns:vm="clr-namespace:OLEDSaver.ViewModels"
             d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
         mc:Ignorable="d"
-        Title="OLEDSaver" 
+        Title="OLED Saver" 
             Width="{Binding WindowWidth, Mode=TwoWay}"
             Height="{Binding WindowHeight, Mode=TwoWay}" 
-        WindowStyle="SingleBorderWindow"
-        WindowState="Normal"
+        WindowStyle="{Binding WindowStyle}"
+        WindowState="{Binding WindowState}"
         WindowStartupLocation="CenterScreen"
-        Background="Black"
-        KeyDown="Window_KeyDown"
-        Name="MainWindowObject">
+        Background="Black">
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
-    
-    <Grid Name="MainWindowGrid">
+
+    <Window.InputBindings>
+        <KeyBinding Command="{Binding ExitApplicationCommand}" Key="C" Modifiers="" />
+        <KeyBinding Command="{Binding ToggleGUICommand}" Key="D" Modifiers="" />
+        <KeyBinding Command="{Binding ToggleWindowStateCommand}" Key="M" Modifiers="" />
+        <KeyBinding Command="{Binding ToggleWindowStyleCommand}" Key="S" Modifiers="" />
+        <KeyBinding Command="{Binding ToggleBlackoutCommand}" Key="F" Modifiers="" />
+    </Window.InputBindings>
+
+    <Grid Visibility="{Binding DisplayGui, Converter={StaticResource BooleanToVisibilityConv}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="2*" />
             <RowDefinition Height="2*" />
@@ -47,6 +53,6 @@
             <Label Foreground="White" Content="{Binding WindowResolutionText}" />
             <Label Foreground="White" Content="{Binding DisplayResolutionText}" />
         </StackPanel>
-        
+
     </Grid>
 </Window>
