--- a/OLEDSaver/App.xaml
+++ b/OLEDSaver/App.xaml
@@ -1,10 +1,12 @@
 ﻿<Application x:Class="OLEDSaver.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:OLEDSaver"
-             StartupUri="Views/MainWindow.xaml">
+             xmlns:local="clr-namespace:OLEDSaver">
     <Application.Resources>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConv" />
-       
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/Converters.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
