--- a/OLEDSaver/Views/MainWindow.xaml
+++ b/OLEDSaver/Views/MainWindow.xaml
@@ -29,6 +29,17 @@
         <KeyBinding Command="{Binding ToggleBlackoutCommand}" Key="F" Modifiers="" />
     </Window.InputBindings>
 
+    <Window.ContextMenu>
+        <ContextMenu>
+            <MenuItem Header="Toggle UI visibility" Command="{Binding ToggleGUICommand}" />
+            <MenuItem Header="Toggle Blackout" Command="{Binding ToggleBlackoutCommand}" />
+            <MenuItem Header="Toggle maximize/restore" Command="{Binding ToggleWindowStateCommand}" />
+            <MenuItem Header="Toggle application bar" Command="{Binding ToggleWindowStyleCommand}"/>
+            <Separator />
+            <MenuItem Header="Exit" Command="{Binding ExitApplicationCommand}" />
+        </ContextMenu>
+    </Window.ContextMenu>
+
     <Grid Visibility="{Binding DisplayGui, Converter={StaticResource BooleanToVisibilityConv}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="2*" />
@@ -41,11 +52,11 @@
 
         <StackPanel Grid.Row="0" Grid.Column="0">
             <Label Margin="5" FontSize="20" Foreground="AliceBlue" HorizontalContentAlignment="Center">Key Bindings</Label>
-            <Label Foreground="White">C - Close the application.</Label>
-            <Label Foreground="White">D - Toggle UI visibility</Label>
-            <Label Foreground="White">F - Switch between full screen resolution size and current size.</Label>
-            <Label Foreground="White">M - Maximize/restore the current window.</Label>
-            <Label Foreground="White">S - Shift between the WindowStyles (disables top application bar).</Label>
+            <Label Foreground="White" Content="C - Close the application." />
+            <Label Foreground="White" Content="D - Toggle UI visibility" />
+            <Label Foreground="White" Content="F - Switch between full screen resolution size and current size." />
+            <Label Foreground="White" Content="M - Maximize/restore the current window." />
+            <Label Foreground="White" Content="S - Shift between the WindowStyles (disables top application bar)." />
         </StackPanel>
 
         <StackPanel Grid.Row="0" Grid.Column="1">
