--- a/OLEDSaver/Views/MainWindow.xaml
+++ b/OLEDSaver/Views/MainWindow.xaml
@@ -53,6 +53,7 @@
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
 
+        <!-- Key Bindings label area -->
         <StackPanel Grid.Row="0" Grid.Column="0">
             <Label Margin="5" FontSize="20" Foreground="AliceBlue" HorizontalContentAlignment="Center">Key Bindings</Label>
             <Label Foreground="White" Content="C - Close the application." />
@@ -61,9 +62,10 @@
             <Label Foreground="White" Content="M - Maximize/restore the current window." />
             <Label Foreground="White" Content="S - Shift between the WindowStyles (disables top application bar)." />
         </StackPanel>
-
+        
+        <!-- Display Info label area -->
         <StackPanel Grid.Row="0" Grid.Column="1">
-            <Label Margin="5" FontSize="20" Foreground="AliceBlue" HorizontalAlignment="Center">Display Info</Label>
+            <Label Margin="5" FontSize="20" Foreground="AliceBlue" HorizontalAlignment="Center">Window Stats</Label>
             <StackPanel Orientation="Horizontal">
                 <Label Foreground="White" Content="Version: " />
                 <Label Foreground="White" Content="{Binding CurrentAppVersion}"/>
@@ -86,6 +88,15 @@
                 <Label Foreground="White" Content="{Binding WindowLeft}" />
             </StackPanel>
         </StackPanel>
-
+        
+        <!-- Settings label area -->
+        <!--<StackPanel Grid.Row="1">
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Background color: " Foreground="White" />
+                <ComboBox>
+                    
+                </ComboBox>
+            </StackPanel>
+        </StackPanel>-->
     </Grid>
 </Window>
